--- a/template/core-dist/src/assets/scss/_entity-index.scss
+++ b/template/core-dist/src/assets/scss/_entity-index.scss
@@ -61,23 +61,14 @@
 
     &__buttons {
       margin-top: 25px;
-      text-align: center;
+      margin-right: 15px;
+      text-align: right;
+      color: #757575;
 
-      span {
-        margin: 0 15px;
-      }
+      &__button {
 
-      &__limit {
-
-        &__input {
-          float: right;
-          width: 80px;
-          margin-left: 15px;
-        }
-
-        &__button {
-          float: right;
-          width: 100px;
+        &--left {
+          margin-left: 30px !important;
         }
       }
     }
