--- a/src/app/pages/rebills-page/rebills-index/rebills.component.html
+++ b/src/app/pages/rebills-page/rebills-index/rebills.component.html
@@ -1,19 +1,32 @@
 <div class="entity-index">
 
-  <blue-header [items]="crumbItems" [titleValue]="title"></blue-header>
+  <blue-header [items]="crumbItems" [titleValue]="'REBILL_INDEX_TITLE'"></blue-header>
 
-  <filter-table [date]="date"
-                [columnParams]="columnParams"
-                [items]="rebills"
-                [tabs]="tabs"
-                [loading]="loadingData"
-                [singleOptions]="options"
-                (filtersSelected)="oFiltersDialog()"
-                (tabSelected)="selectTab($event)"
-                (dateChanged)="changeDate($event)"
-                (singleOptionSelected)="optionSelected($event)"
-                (loadMore)="loadMore()">
-  </filter-table>
+  <entities-table-wrapper
+          [data]="entities"
+          [loaded]="initialLoaded"
+          [columnParams]="columnParams"
+          [filterString]="filterValue"
+          [serverError]="serverError"
+          (selected)="viewEntity($event.id)"
 
+          [service]="service"
+          (viewClicked)="viewEntity($event.id)"
+          (copyClicked)="copyEntity($event.id)"
+          (exportClicked)="exportEntity($event.id)"
+          (editClicked)="editEntity($event.id)"
+          (deleteClicked)="deleteEntity($event.id)"
+          (deleteManyClicked)="deleteMany($event)"
+          (refreshData)="refreshData()"
+
+          [limit]="limit"
+          [paginationValues]="paginationValues"
+          [previousDisabled]="page <= 0"
+          [nextDisabled]="!hasMorePages()"
+          (previous)="previous()"
+          (next)="next()"
+          (updateLimit)="updateLimit($event)"
+          (filterChanged)="filterValue = $event"
+          (searchChanged)="setSearchString($event)">
+  </entities-table-wrapper>
 </div>
-
