--- a/src/app/shared/components/filter-table/filter-table.component.html
+++ b/src/app/shared/components/filter-table/filter-table.component.html
@@ -85,14 +85,21 @@
         <tr *ngFor="let item of items">
           <td><mat-checkbox class="checkbox-blue" (change)="toggleSelection($event)" [(ngModel)]="item.bulkSelected"></mat-checkbox></td>
           <ng-container *ngFor="let param of columnParams">
-            <td *ngIf="param.selected" [class.clickable]="param.clickable" [class.capitalized]="param.capitalize" (click)="cellClicked(param, item)">
+            <td *ngIf="param.selected" [class.capitalized]="param.capitalize">
 
               <ng-container *ngIf="param.materialIconMapper">
                 <mat-icon class="table-icon" [style.background-color]="param.materialIconBackgroundColorMapper(item)" [style.color]="param.materialIconColorMapper(item)">{{param.materialIconMapper(item)}}</mat-icon>
               </ng-container>
+
               <span class="table-content">
-              {{param.mappingFunction(item)}}
+                <a *ngIf="param.link; else plaintext" [routerLink]="[param.link(item)]" [queryParams]="param.queryParams(item)">
+                  {{param.mappingFunction(item)}}
+                </a>
+                <ng-template #plaintext>
+                  {{param.mappingFunction(item)}}
+                </ng-template>
               </span>
+
             </td>
           </ng-container>
           <td>
